# as2_platform_dji_psdk

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  README.md  install_requirements.sh  package.xml
.github/workflows/: build_humble.yaml
config/: control_modes.yaml  platform_config_file.yaml  psdk_params.yaml
include/as2_platform_dji_psdk/: as2_platform_dji_psdk.hpp
include/as2_platform_template/: as2_platform_template.hpp
launch/: as2_platform_dji_psdk.launch.py  as2_platform_dji_psdk_launch.py  as2_platform_template_launch.py  psdk_wrapper.launch.py  wrapper.launch.py
src/: as2_platform_dji_psdk.cpp  as2_platform_dji_psdk_node.cpp  as2_platform_template.cpp  as2_platform_template_node.cpp
src/details/: as2_dji_matrice_psdk_platform_impl.cpp  as2_dji_matrice_psdk_platform_impl.hpp  i_timer_tick.hpp  output.hpp  service_client.hpp  timer_with_rate.cpp  timer_with_rate.hpp
tests/: as2_platform_dji_psdk_gtest.cpp  as2_platform_template_gtest.cpp
