<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_platform_template</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cvar.upm3@gmail.com">CVAR-UPM</maintainer>
  <license>BDS-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>as2_core</depend>
  <depend>as2_msgs</depend>
  <depend>std_msgs</depend>

  <!-- linting test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
